Here is the basic framework for Peer Advice page

--- a/src/main/webapp/peer_advice.html
+++ b/src/main/webapp/peer_advice.html
@@ -28,7 +28,7 @@
 
         <form id="peer-form" method="post" action="#">
             <div class="peer-title">
-                <h2>Send A Message To Fellow Students</h2>
+                <h2>Send A Message To Fellow Students!</h2>
             </div>
 
             <span class="error_message hidden" id="username_error">
