--- a/src/main/webapp/display.html
+++ b/src/main/webapp/display.html
@@ -31,6 +31,7 @@
       <div id="submit-advice">
           <p id="show_name">Username: </p>
           <p id="show_uni">University: </p>
+          <p id="show_major">Major: </p>
           <p id="show_grade">What grade are you in?: </p>
           <p id="show_advice">Drop any Advice/Question/Comment: </p>
       </div>
@@ -42,8 +43,18 @@
     </header>
 
     <script>
-    function show_name() {
-        document.getElementById("submit-advice").innerHTML = user-name;
+    function show() {
+        var strText = document.getElementById("user_name").value;
+        var strText1 = document.getElementById("university").value;
+        var strText2 = document.getElementById("major").value;
+        var strText3 = document.getElementById("grade").value;
+        var strText4 = document.getElementById("advice").value;
+
+        document.getElementById("p1").innerHTML = strText;
+        document.getElementById("p2").innerHTML = strText1;
+        document.getElementById("p3").innerHTML = strText2;
+        document.getElementById("p4").innerHTML = strText3;
+        document.getElementById("p5").innerHTML = strText4;
     }
     </script>
 
