--- a/src/main/webapp/Health.html
+++ b/src/main/webapp/Health.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>BAResources</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+    <a href="Home.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
     <a href="Peer.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Peer Advice</a>
     <a href="Advising.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Academic Advising</a>
     <a href="Health.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Health</a>
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="images/Health.jpg" alt="Hamburger Catering" width="1600" height="800">
+  <img class="w3-image" src="Health.jpg" alt="Hamburger Catering" width="1600" height="800">
   <div class="w3-display-bottomleft w3-white w3-padding-large w3-opacity">
     <h1 class="w3-xxlarge" style="color:black">Health on Campus</h1>
   </div>
@@ -39,41 +39,22 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Page content -->
 <div class="w3-content" style="max-width:1100px">
 
-  <!-- Mental Section -->
-  <div class="w3-row w3-padding-64" id="about">
-    <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="images/mental.jpg" class="w3-round w3-image" alt="Table Setting" width="600" height="750">
-    </div>
+<br>
 
-    <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">Mental Health</h1>
-      <h5 class="w3-center">Be Bold. Be Strong.</h5>
-      <p class="w3-large">Hotlines: Link</p>
-      <p class="w3-large">Campus Resources: Link</p>
-      <p class="w3-large">Leave of Absence: Link</p>
-      <p class="w3-large">General Tips & Tricks: Link</p>
+<div class="w3-container w3-dark-grey">
+      <h2>Find University Page</h2>
     </div>
-  </div>
-  
-  <hr>
-  
-  <!-- Physical Section -->
-  <div class="w3-row w3-padding-64" id="menu">
-    <div class="w3-col l6 w3-padding-large">
-      <h1 class="w3-center">Physical Health</h1>
-      <h5 class="w3-center">Word Hard. Play Hard.</h5>
-      <p class="w3-large">Campus Resources: Link</p>
-      <p class="w3-large">Club Sports: Link</p>
-      <p class="w3-large">Varsity Programs: Link</p>
-      <p class="w3-large">General Tips & Tricks: Link</p>
-    </div>
-
- <div class="w3-col l6 w3-padding-large">
-      <img src="images/Physical.jpg" class="w3-round w3-image" alt="Menu" style="width:100%">
-    </div>
-  </div>
-
-  <hr>
+    <div class="w3-container w3-white w3-padding-16">
+      <form action="/action_page.php" target="_blank">
+        <div class="w3-row-padding" style="margin:0 -16px;">
+          <div class="w3-center">
+<select onchange="location = this.options[this.selectedIndex].value;">
+    <option>College/University</option>
+    <option value="Princeton.html">Princeton University</option>
+    <option value="Cornell.html">Cornell University</option>
+    <option value="Columbia.html">Columbia University</option>
+</select>​
+</div>
   
 <!-- End page content -->
 </div>
