--- a/src/main/webapp/display.html
+++ b/src/main/webapp/display.html
@@ -18,7 +18,7 @@
 <body>
     <div class="w3-top">
         <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-            <a href="Home.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+            <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
             <a href="peer-advice.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Peer Advice</a>
             <a href="Advising.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Academic Advising</a>
             <a href="Health.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Health</a>
